opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/spawn"
bug-reports: "https://github.com/janestreet/spawn/issues"
dev-repo: "git+https://github.com/janestreet/spawn.git"
doc: "https://janestreet.github.io/spawn/"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]
build-test: [
  # We don't test with OCaml < 4.04 as older versions of ppx_expect
  # don't work with jbuilder
  ["jbuilder" "runtest" "-p" name "-j" jobs] { ocaml-version >= "4.04" }
]
depends: [
  "jbuilder" {build & >= "1.0+beta18.1"}
  "ppx_expect" {test}
]
available: [ ocaml-version >= "4.02.3" ]
