opam-version: "2.0"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/spawn"
bug-reports: "https://github.com/janestreet/spawn/issues"
dev-repo: "git+https://github.com/janestreet/spawn.git"
doc: "https://janestreet.github.io/spawn/"
license: "Apache-2.0"
build: [
  ["dune" "build" "-p" name "-j" jobs]
  # We don't test with OCaml < 4.04 as older versions of ppx_expect
  # don't work with dune
  ["dune" "runtest" "-p" name "-j" jobs] {with-test & ocaml >= "4.04" }
]
depends: [
  "dune" {build}
  "ppx_expect" {test}
  "ocaml" {>= "4.02.3"}
]
